[package]
name = "rb"
description = "A thread-safe ring buffer with blocking IO"
keywords = ["IO", "audio", "ring-buffer", "circular-buffer"]
version = "0.3.2"
authors = ["Andreas Linz <klingt.net@gmail.com>"]
documentation = "https://docs.rs/rb"
repository = "https://github.com/klingtnet/rb"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]

[dev-dependencies]
rand = "0.3.14"
